minikube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: go-api-gateway.com
      http:
        paths:
          - path: /
            backend:
              serviceName: apigateway
              servicePort: 4000
    - host: go-api.com
      http:
        paths:
          - path: /
            backend:
              serviceName: go-api
              servicePort: 8000
    - host: typing-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myapp
              servicePort: 3000
